--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sp-stack",
   "version": "1.0.0",
   "description": "公共组件",
-  "main": "./stack/sp-stack.umd.cjs",
-  "module": "./stack/sp-stack.js",
+  "main": "./stack/sp-stack.umd.js",
+  "module": "./stack/sp-stack.mjs",
   "types": "./types/index.d.ts",
   "author": "yuiyi",
   "license": "ISC",
