--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "sp-stack",
   "version": "1.0.0",
   "description": "公共组件",
-  "main": "./stack/sp-stack.umd.js",
-  "module": "./stack/sp-stack.mjs",
-  "types": "./types/index.d.ts",
+  "main": "./lib/index.umd.js",
+  "module": "./lib/index.mjs",
+  "typings": "./lib/entry.d.ts",
   "author": "yuiyi",
   "license": "ISC",
   "files": [
-    "stack",
-    "types",
-    "README.md"
+    "lib"
   ],
   "scripts": {
     "dev": "vite",
@@ -26,6 +24,7 @@
     "less": "^4.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-dts": "^1.7.1",
     "vue-tsc": "^1.0.11"
   },
   "peerDependencies": {
