--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sp-stack",
   "version": "1.0.0",
   "description": "公共组件",
-  "main": "./lib/index.umd.js",
-  "module": "./lib/index.mjs",
+  "main": "./lib/index.es.js",
+  "module": "./lib/index.es.js",
   "typings": "./lib/entry.d.ts",
   "author": "yuiyi",
   "license": "ISC",
